[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/network/network_example_usage.gd" id="1"]

[node name="NetworkTestUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Battle Castles Network Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Disconnected"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="MatchmakingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Find Match"
disabled = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GameActionsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Actions"
horizontal_alignment = 1

[node name="SpawnUnitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Spawn Unit"
disabled = true

[node name="BuildTowerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Build Tower"
disabled = true

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NetworkInfo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Network Stats:
- Latency: 0ms
- Buffer Size: 0
- Connection: None"